# NeoTerritory

./: .dockerignore  .gitattributes  .gitignore  .vercelignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  CS-THESIS DOCUMENT -CHAPTER 4 TO 5.docx  DOCS.md  GEMINI.md  INVESTIGATIONS-FROM-50-USER-SOAK.md  NOTES-FOR-DOCS-WRITER.txt  README.md  RESULTS.txt  Redef.srt  Redef.transcript.md  SYSTEM_SPECIFICATIONS.md  THESIS 3 DEFENSE- PPT CONTENT.docx  TIMELINE.md  agent.jo.md  analysis_report.json  backend-dev.err  behavioural_broken_ast.html  bootstrap.ps1  bootstrap.sh  clean-browser.ps1  clean-browser.sh  creational_parse_tree.html  deploy.manifest.json  deploy.ps1  generated_base_code.cpp  generated_base_code.html  generated_target_code_singleton.cpp  generated_target_code_singleton.html  overhaul_seed.js  package-lock.json  package.json  parse_tree.html  run-dev.ps1  (+8 more)
.githooks/: pre-commit
Codebase/Microservice/: CMakeLists.txt  setup.sh
Codebase/Microservice/Layer/Back system/: syntacticBrokenAST.cpp
Codebase/Microservice/Modules/Header/Analysis/Input/: cli_arguments.hpp
Codebase/Microservice/Modules/Header/Analysis/Lexical/: token_stream.hpp
Codebase/Microservice/Modules/Header/Creational/Builder/: builder_pattern_logic.hpp
Codebase/Microservice/Modules/Header/Creational/Factory/: factory_pattern_logic.hpp
Codebase/Microservice/Modules/Header/Creational/Logic/: creational_pattern_mediator.hpp
Codebase/Microservice/Modules/Header/Creational/Singleton/: singleton_pattern_logic.hpp
Codebase/Microservice/Modules/Header/Creational/Transform/: creational_code_generator_internal.hpp  creational_transform_pipeline.hpp
Codebase/Microservice/Modules/Header/SyntacticBrokenAST/: parse_tree_code_generator.hpp
Codebase/Microservice/Modules/Source/: README.md
Codebase/Microservice/Modules/Source/Behavioural/: behavioural_broken_tree.cpp
Codebase/Microservice/Modules/Source/Creational/: creational_broken_tree.cpp
Codebase/Microservice/Modules/Source/OutputGeneration/: core.cpp
Codebase/Microservice/Modules/Source/Trees/: core.cpp
Codebase/Microservice/Runtime/Back system/: syntacticBrokenAST.cpp
Codebase/Microservice/Test/Input/: factory_to_base_identifier_literal_source.cpp  factory_to_base_instance_source.cpp  factory_to_base_kind_numeric_source.cpp  factory_to_base_non_literal_source.cpp  factory_to_base_unresolved_instance_source.cpp
Codebase/Microservice/pattern_catalog/: lexeme_categories.json
Codebase/Microservice/pattern_catalog/_runtime/: introspect.hpp
Codebase/Microservice/pattern_catalog/behavioural/: chain_of_responsibility.fallback_doc.json  chain_of_responsibility.json  chain_of_responsibility.test.template.cpp  command.fallback_doc.json  command.json  command.test.template.cpp  interpreter.fallback_doc.json  interpreter.json  interpreter.test.template.cpp  iterator.fallback_doc.json  iterator.json  iterator.test.template.cpp  mediator.fallback_doc.json  mediator.json  mediator.test.template.cpp  memento.fallback_doc.json  memento.json  memento.test.template.cpp  observer.fallback_doc.json  observer.json  observer.test.template.cpp  state.fallback_doc.json  state.json  state.test.template.cpp  strategy_concrete.json  strategy_concrete.test.template.cpp  strategy_interface.json  template_method.fallback_doc.json  template_method.json  template_method.test.template.cpp  visitor.fallback_doc.json  visitor.json  visitor.test.template.cpp
Codebase/Microservice/pattern_catalog/behavioural/strategy_interface/: subclass.json
Codebase/Microservice/pattern_catalog/creational/: abstract_factory.fallback_doc.json  abstract_factory.json  abstract_factory.test.template.cpp  builder.json  builder.test.template.cpp  factory.json  factory.test.template.cpp  method_chaining.json  method_chaining.test.template.cpp  prototype.fallback_doc.json  prototype.json  prototype.test.template.cpp  singleton.json  singleton.test.template.cpp
Codebase/Microservice/pattern_catalog/idiom/: pimpl.json
Codebase/Microservice/pattern_catalog/structural/: adapter.json  adapter.test.template.cpp  bridge.fallback_doc.json  bridge.json  bridge.test.template.cpp  composite.fallback_doc.json  composite.json  composite.test.template.cpp  decorator.json  decorator.test.template.cpp  facade.fallback_doc.json  facade.json  facade.test.template.cpp  flyweight.fallback_doc.json  flyweight.json  flyweight.test.template.cpp  proxy.json  proxy.test.template.cpp  virtual_proxy.json
Codebase/Microservice/samples/: sample-tags.json
Codebase/Microservice/samples/abstract_factory/: gui_factory.cpp
Codebase/Microservice/samples/bridge/: shape_renderer.cpp
Codebase/Microservice/samples/chain_of_responsibility/: handler_chain.cpp
Codebase/Microservice/samples/command/: command_undo.cpp
Codebase/Microservice/samples/composite/: graphic_tree.cpp
Codebase/Microservice/samples/edge_cases/: composite_no_pattern.cpp  fake_singleton_friend.cpp  hidden_singleton.cpp  intentionally_clean_dto.cpp  multimethod_no_pattern.cpp  proxy_shaped_dto.cpp
Codebase/Microservice/samples/facade/: computer_facade.cpp
Codebase/Microservice/samples/flyweight/: glyph_factory.cpp
Codebase/Microservice/samples/integration/: all_patterns.cpp
Codebase/Microservice/samples/interpreter/: expression_interpreter.cpp
Codebase/Microservice/samples/iterator/: list_iterator.cpp
Codebase/Microservice/samples/mediator/: mediator_notify.cpp
Codebase/Microservice/samples/memento/: editor_memento.cpp
Codebase/Microservice/samples/observer/: observer_subject.cpp
Codebase/Microservice/samples/prototype/: shape_clone.cpp
Codebase/Microservice/samples/state/: state_machine.cpp
Codebase/Microservice/samples/template_method/: report_generator.cpp
Codebase/Microservice/samples/visitor/: visitor_shapes.cpp
Codebase/Microservice/samples/wrapping/: logging_proxy.cpp
test/alpha/unit/microservice/: CMakeLists.txt  test_pattern_dispatch.cpp  test_pipeline_smoke.cpp
(+2172 files in other folders)
